# data-processor-for-pareto-active-learning

./: LICENSE  README-EN.md  README.md  pyproject.toml
data_processor/: __init__.py  combination.py  data_comparison.py  data_expansion.py  data_removement.py  normalization.py  standardization.py  utils.py
